# i3statuspp

./: .gitignore  Cargo.toml  README.md  config.go  config_test.go  default.nix  event.go  event_test.go  flake.nix  go.mod  go.sum  main.go  wrapper.go
.github/workflows/: build.yml  test.yml
share/: config.json
src/: config.rs  i3.rs  main.rs
