[package]
name = "i3statuspp"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = {version="0.9.0", default-features = false, features = ["atty"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
smol = "1.2.5"
dirs-next = "2.0.0"
anyhow = "1.0.42"
shlex = "1.0.0"

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
# for profiling
# debug = 1
